# ippl

./: .gitignore  Basics.html  CMakeLists.txt  Installation.html  LandauDamping.html  Vector_8h_source.html  Vector_8hpp_source.html  basic_index.html  basic_solver.html  basics_fields.html  classippl_1_1Vector-members.html  classippl_1_1Vector.html  dir_687bdf86e8e626c2168c3a2d1c125116.html  files.html  functions_func_p.html  functions_p.html  index.html  md_extras_MainPage.html
.github/workflows/: jekyll-gh-pages.yml  main.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: IpplConfig.cmake  IpplVersions.h  Makefile  cmake_install.cmake
cmake/: Dependencies.cmake
doc/: Doxyfile  Makefile
docs/: Archive_8h.html  Archive_8h__dep__incl.map  Archive_8h__incl.map  Archive_8hpp_source.html  BConds_8hpp_source.html  BareField_8h.html  BareField_8h__dep__incl.map  BareField_8h_source.html  BareField_8hpp_source.html  BaseManager_8h_source.html  BcTypes_8h_source.html  Buffers_8hpp_source.html  CIC_8h_source.html  CartesianCentering_8h_source.html  Communicate_8h__incl.map  DataTypes_8h_source.html  Distribution_8h__dep__incl.map  Distribution_8h__incl.map  Distribution_8h_source.html  Environment_8h.html  Environment_8h__dep__incl.md5  Environment_8h_source.html  FFTOpenPoissonSolver_8h_source.html  FFTPeriodicPoissonSolver_8h_source.html  FFTPeriodicPoissonSolver_8hpp_source.html  FFT_8hpp_source.html  FieldLayout_8h_source.html  FieldLayout_8hpp_source.html  FieldOperations_8hpp_source.html  FieldSolverBase_8h_source.html  Field_8h_source.html  HaloCells_8h.html  HaloCells_8h__dep__incl.map  HaloCells_8h__dep__incl.md5  HaloCells_8h__incl.map  HaloCells_8hpp_source.html  Inform_8h_source.html  InverseTransformSampling_8h__incl.map  IpplCore_8h_source.html  IpplException_8h_source.html  (+355 more)
docs/html/: Archive_8h__dep__incl.md5  Archive_8h__incl.md5  Archive_8h_source.html  BConds_8h_source.html  BareFieldOperations_8hpp_source.html  BareField_8h__dep__incl.md5  BareField_8h__incl.map  BareField_8h__incl.md5  BcTypes_8hpp_source.html  CIC_8hpp_source.html  Centering_8h_source.html  (+402 more)
fel/: CMakeLists.txt  FreeElectronLaser.cpp  NSFDSolverWithParticles.h
search/: all_1.js  all_2.js  all_3.js  all_f.js  files_2.js  functions_e.js  pages_0.js  searchdata.js
semesterproject/: CMakeLists.txt  FusionReactor.cpp  FusionReactorManager.h  TestUnstructuredFieldContainer.cpp  UParticleContainer.h  UnstructuredFieldContainer.hpp  UnstructuredGridManager.h  UnstructuredPicManager.h  WeightsTest.cpp  curlPlot.py  datatypes.h
semesterproject/inputdata/reactormesh/: 1000IdenticalParticles.csv  CreateInputFile.py  GivenTestcases.csv  GridInput.py  IdenticalCartesion.csv  IdenticalParticles.csv  InitialParticles.csv  InitialParticlesTestcase.csv  RandomInputData.py  TestParticlesOuterLoop.csv  UniformInputData.py  Z0R033A-16-44.csv  pointdata.txt  pointdataInner.txt  pointdataOuter.txt
semesterproject/inputdata/testmesh/: IdenticalCartesion.csv  Particle.csv
semesterproject/mesh/: pathVisualization.py  vtkMeshCreator.py
semesterproject/mesh/reactormesh/: mesh.vtk
semesterproject/mesh/reactormesh/vtkInput/NewMesh/: Plasm18592N.txt  PlasmE15641.txt  Plasma_B.txt
semesterproject/mesh/reactormesh/vtkInput/NewMesh/BoundaryClassification/: Tcilin.txt  Tip_E.txt  Torus.txt  Tubo_ext_A.txt  Tubo_ext_B.txt  Tubo_int.txt  Tun_Fillet_E.txt  Tun_Roof_E.txt  Tun_Side_E.txt  Tun_Slant_E.txt  Tvault.txt
semesterproject/mesh/reactormesh/vtkInput/OldMesh/: B22642_XYZmod_I8_1X_4E12.txt  Elem19482_8I6_I6_24X_I6.txt  Node22642_I8_3G20_Rev.txt
semesterproject/mesh/testmesh/: .gitignore  UniformMeshData.py  basicMeshData.py
semesterproject/mesh/testmesh/input/: meshdata.txt
semesterproject/unusedFiles/: UnstructuredParticleContainer.h  UnstructuredParticleSpatialLayout.h  testsimulation.py
semesterproject/visualization/: BoundaryRegion.py  DiffIdentPart.py  MeshRegion.py  PlotEnergy.py  combine.py  curlPlot.py  pathVisualization.py
semesterproject/visualization/Boundarys/: BoundaryRegion.py
semesterproject/visualization/CurlBField/: HistPlot.py
semesterproject/visualization/Energy/: PlotEnergy.py
src/: IpplCore.h
src/FEM/: CMakeLists.txt  DOFArray.h  DOFHandler.h  DOFHandler.hpp  Entity.h  FEMContainer.h  FEMContainer.hpp  FiniteElementSpace.h  FiniteElementSpaceTraits.h  LagrangeSpace.h  LagrangeSpace.hpp  LagrangeSpaceFEMContainer.h  LagrangeSpaceFEMContainer.hpp
test/FEM/FEMContainer/: CMakeLists.txt  TestFEMContainer.cpp
(+158 files in other folders)
